2005-09-06  Chao-ying Fu  <fu@mips.com>

	* config/tc-mips.c (mips_set_options): Add ase_mt for MT instructions.
	(mips_opts): Add -1 to initialize ase_mt.
	(file_ase_mt): New variable for -mmt.
	(CPU_HAS_MT): New define.
	(validate_mips_insn): Add supports for +t, +T, !, $, *, &, g operand
	formats.
	(mips_ip): Check ase_mt to enable MT instructions.
	Handle !, $, *, &, +T, +t, g operand formats.
	For "mftc1", "mfthc1", "cftc1", "mttc1", "mtthc1", "cttc1", we allow
	odd float registers.
	(OPTION_MT, OPTION_NO_MT): New define.
	(OPTION_COMPAT_ARCH_BASE): Change because of inserting MT define.
	(md_parse_option): Parse OPTION_MT and OPTION_NO_MT.
	(mips_after_parse_args): Set ase_mt based on CPU.
	(s_mipsset): Handle ".set mt" and ".set nomt".
	(mips_elf_final_processing): Remind of adding new flag for MT ASE.
	(md_show_usage): Show usage of -mmt and -mno-mt.
	* doc/as.texinfo: Document -mmt and -mno-mt options.
	* doc/c-mips.texi: Likewise, and document ".set mt" and ".set nomt"
	directives.

2005-09-06  Paul Brook  <paul@codesourcery.com>

	* config/tc-arm.c (arm_it): Add relax field.
	(T16_32_TAB): Add addi, addis, add_pc, add_sp, dec_sp, inc_sp,
	b, bcond, ldr_pc, ldr_pc2, ldr_sp, str_sp, subi, subis.
	(do_t_add_sub, do_t_addr, do_t_branch, do_t_ldst,
	do_t_mov_cmp): Allow relaxation.
	(output_relax_insn): New function.
	(put_thumb32_insn): New function.
	(output_inst): Use new functions.
	(md_assemble): Don't throw error on relaxable instructions.
	(insns): Change "b" entry from TCE(...) to tCE(...).
	(md_estimate_size_before_relax): Return 2.
	(md_convert_frag, relax_immediate, relax_adr, relax_addsub,
	relax_branch, arm_relax_frag): New functions.
	(arm_force_relocation): Return 0 for Thumb-2 immediate operand
	relocations.
	* config/tc-arm.h (md_convert_frag): Remove definition.
	(md_relax_frag): Define.
	(arm_relax_frag): Add prototype.

2005-09-02  Paul Brook  <paul@codesourcery.com>

	* config/tc-arm.c (do_rn_rd): Enforce SWP operand constraints.
